--- a/201802/05/public/mlk.html
+++ b/201802/05/public/mlk.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-  <title>664Project</title>
+  <title>664Project01</title>
   <meta charset="utf-8">
   <meta name="viewport" content="width=device-width, initial-scale=1">
   <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css">
@@ -85,8 +85,11 @@
 		I have a dream today. 
 		I have a dream that one day every valley shall be exalted, every hill and mountain shall be made low, the rough places will be made plain, and the crooked places will be made straight, and the glory of the Lord shall be revealed, and all flesh shall see it together… </p>
       <hr>
-      <h3>Background</h3>
+	<center>
+      <h3>Background Information</h3>
       <p>Speech by Martin Luther King Jr....</p>
+	<img src="ml.jpg" alt="Martin Luther King Jr.">
+ </center>
     </div>
     <div class="col-sm-2 sidenav">
       <div class="well">
